Gl1/Gl1/ParserSpace/TableurParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Tableur.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class TableurParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PLUS=1, MINUS=2, MULT=3, DIV=4, MOD=5, AFFECT=6, PAROUV=7, PARFERM=8, 
		AT=9, PV=10, READ=11, DELETE=12, PROPAGE=13, COPY=14, OPEN=15, SAVE=16, 
		EXPORT=17, IMPORT=18, HELP=19, TO=20, INTO=21, QUIT=22, VIRG=23, INT=24, 
		FLOAT=25, FNCTN=26, ADR=27, STRING=28, PATHCSV=29, PATHPROP=30, IGNORE=31;
	public const int
		RULE_sequence = 0, RULE_instr = 1, RULE_expr = 2, RULE_multdivmod = 3, 
		RULE_unary = 4, RULE_atom = 5, RULE_function = 6;
	public static readonly string[] ruleNames = {
		"sequence", "instr", "expr", "multdivmod", "unary", "atom", "function"
	};

	private static readonly string[] _LiteralNames = {
		null, "'+'", "'-'", "'*'", "'/'", "'mod'", "'<-'", "'('", "')'", "'@'", 
		"';'", "'read'", "'delete'", "'propage'", "'copy'", "'open'", "'save'", 
		"'export'", "'import'", "'help'", "'to'", "'into'", "'quit'", "','"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PLUS", "MINUS", "MULT", "DIV", "MOD", "AFFECT", "PAROUV", "PARFERM", 
		"AT", "PV", "READ", "DELETE", "PROPAGE", "COPY", "OPEN", "SAVE", "EXPORT", 
		"IMPORT", "HELP", "TO", "INTO", "QUIT", "VIRG", "INT", "FLOAT", "FNCTN", 
		"ADR", "STRING", "PATHCSV", "PATHPROP", "IGNORE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Tableur.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static TableurParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TableurParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TableurParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class SequenceContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(TableurParser.Eof, 0); }
		public InstrContext[] instr() {
			return GetRuleContexts<InstrContext>();
		}
		public InstrContext instr(int i) {
			return GetRuleContext<InstrContext>(i);
		}
		public ITerminalNode[] PV() { return GetTokens(TableurParser.PV); }
		public ITerminalNode PV(int i) {
			return GetToken(TableurParser.PV, i);
		}
		public SequenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_sequence; } }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterSequence(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitSequence(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSequence(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SequenceContext sequence() {
		SequenceContext _localctx = new SequenceContext(Context, State);
		EnterRule(_localctx, 0, RULE_sequence);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 19;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << READ) | (1L << DELETE) | (1L << PROPAGE) | (1L << COPY) | (1L << OPEN) | (1L << SAVE) | (1L << EXPORT) | (1L << IMPORT) | (1L << HELP) | (1L << QUIT) | (1L << ADR))) != 0)) {
				{
				{
				State = 14; instr();
				State = 15; Match(PV);
				}
				}
				State = 21;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 22; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstrContext : ParserRuleContext {
		public InstrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instr; } }
	 
		public InstrContext() { }
		public virtual void CopyFrom(InstrContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ReadContext : InstrContext {
		public ITerminalNode READ() { return GetToken(TableurParser.READ, 0); }
		public ITerminalNode ADR() { return GetToken(TableurParser.ADR, 0); }
		public ReadContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterRead(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitRead(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRead(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DeleteContext : InstrContext {
		public ITerminalNode DELETE() { return GetToken(TableurParser.DELETE, 0); }
		public ITerminalNode ADR() { return GetToken(TableurParser.ADR, 0); }
		public DeleteContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterDelete(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitDelete(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDelete(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ImportContext : InstrContext {
		public ITerminalNode IMPORT() { return GetToken(TableurParser.IMPORT, 0); }
		public ITerminalNode PATHCSV() { return GetToken(TableurParser.PATHCSV, 0); }
		public ImportContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterImport(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitImport(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitImport(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class HelpContext : InstrContext {
		public ITerminalNode HELP() { return GetToken(TableurParser.HELP, 0); }
		public HelpContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterHelp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitHelp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHelp(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CopyContext : InstrContext {
		public ITerminalNode COPY() { return GetToken(TableurParser.COPY, 0); }
		public ITerminalNode[] ADR() { return GetTokens(TableurParser.ADR); }
		public ITerminalNode ADR(int i) {
			return GetToken(TableurParser.ADR, i);
		}
		public ITerminalNode INTO() { return GetToken(TableurParser.INTO, 0); }
		public CopyContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterCopy(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitCopy(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCopy(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PropageContext : InstrContext {
		public ITerminalNode PROPAGE() { return GetToken(TableurParser.PROPAGE, 0); }
		public ITerminalNode[] ADR() { return GetTokens(TableurParser.ADR); }
		public ITerminalNode ADR(int i) {
			return GetToken(TableurParser.ADR, i);
		}
		public ITerminalNode TO() { return GetToken(TableurParser.TO, 0); }
		public PropageContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterPropage(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitPropage(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPropage(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ExportContext : InstrContext {
		public ITerminalNode EXPORT() { return GetToken(TableurParser.EXPORT, 0); }
		public ITerminalNode PATHCSV() { return GetToken(TableurParser.PATHCSV, 0); }
		public ExportContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterExport(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitExport(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExport(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class QuitContext : InstrContext {
		public ITerminalNode QUIT() { return GetToken(TableurParser.QUIT, 0); }
		public QuitContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterQuit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitQuit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuit(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class SaveContext : InstrContext {
		public ITerminalNode SAVE() { return GetToken(TableurParser.SAVE, 0); }
		public ITerminalNode PATHPROP() { return GetToken(TableurParser.PATHPROP, 0); }
		public SaveContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterSave(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitSave(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSave(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class InsertContext : InstrContext {
		public ITerminalNode ADR() { return GetToken(TableurParser.ADR, 0); }
		public ITerminalNode AFFECT() { return GetToken(TableurParser.AFFECT, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public InsertContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterInsert(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitInsert(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInsert(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class OpenContext : InstrContext {
		public ITerminalNode OPEN() { return GetToken(TableurParser.OPEN, 0); }
		public ITerminalNode PATHPROP() { return GetToken(TableurParser.PATHPROP, 0); }
		public OpenContext(InstrContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterOpen(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitOpen(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOpen(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InstrContext instr() {
		InstrContext _localctx = new InstrContext(Context, State);
		EnterRule(_localctx, 2, RULE_instr);
		int _la;
		try {
			State = 53;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case ADR:
				_localctx = new InsertContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 24; Match(ADR);
				State = 25; Match(AFFECT);
				State = 26; expr(0);
				}
				break;
			case READ:
				_localctx = new ReadContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 27; Match(READ);
				State = 28; Match(ADR);
				}
				break;
			case DELETE:
				_localctx = new DeleteContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 29; Match(DELETE);
				State = 30; Match(ADR);
				}
				break;
			case PROPAGE:
				_localctx = new PropageContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 31; Match(PROPAGE);
				State = 32; Match(ADR);
				State = 33; Match(TO);
				State = 34; Match(ADR);
				}
				break;
			case COPY:
				_localctx = new CopyContext(_localctx);
				EnterOuterAlt(_localctx, 5);
				{
				State = 35; Match(COPY);
				State = 36; Match(ADR);
				State = 37; Match(INTO);
				State = 38; Match(ADR);
				}
				break;
			case SAVE:
				_localctx = new SaveContext(_localctx);
				EnterOuterAlt(_localctx, 6);
				{
				State = 39; Match(SAVE);
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==PATHPROP) {
					{
					State = 40; Match(PATHPROP);
					}
				}

				}
				break;
			case EXPORT:
				_localctx = new ExportContext(_localctx);
				EnterOuterAlt(_localctx, 7);
				{
				State = 43; Match(EXPORT);
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==PATHCSV) {
					{
					State = 44; Match(PATHCSV);
					}
				}

				}
				break;
			case OPEN:
				_localctx = new OpenContext(_localctx);
				EnterOuterAlt(_localctx, 8);
				{
				State = 47; Match(OPEN);
				State = 48; Match(PATHPROP);
				}
				break;
			case IMPORT:
				_localctx = new ImportContext(_localctx);
				EnterOuterAlt(_localctx, 9);
				{
				State = 49; Match(IMPORT);
				State = 50; Match(PATHCSV);
				}
				break;
			case QUIT:
				_localctx = new QuitContext(_localctx);
				EnterOuterAlt(_localctx, 10);
				{
				State = 51; Match(QUIT);
				}
				break;
			case HELP:
				_localctx = new HelpContext(_localctx);
				EnterOuterAlt(_localctx, 11);
				{
				State = 52; Match(HELP);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
	 
		public ExprContext() { }
		public virtual void CopyFrom(ExprContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ToMultContext : ExprContext {
		public MultdivmodContext multdivmod() {
			return GetRuleContext<MultdivmodContext>(0);
		}
		public ToMultContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterToMult(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitToMult(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToMult(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PlusContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode PLUS() { return GetToken(TableurParser.PLUS, 0); }
		public MultdivmodContext multdivmod() {
			return GetRuleContext<MultdivmodContext>(0);
		}
		public PlusContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterPlus(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitPlus(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPlus(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MinusContext : ExprContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode MINUS() { return GetToken(TableurParser.MINUS, 0); }
		public MultdivmodContext multdivmod() {
			return GetRuleContext<MultdivmodContext>(0);
		}
		public MinusContext(ExprContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterMinus(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitMinus(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMinus(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		return expr(0);
	}

	private ExprContext expr(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExprContext _localctx = new ExprContext(Context, _parentState);
		ExprContext _prevctx = _localctx;
		int _startState = 4;
		EnterRecursionRule(_localctx, 4, RULE_expr, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ToMultContext(_localctx);
			Context = _localctx;
			_prevctx = _localctx;

			State = 56; multdivmod(0);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 66;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 64;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
					case 1:
						{
						_localctx = new PlusContext(new ExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 58;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 59; Match(PLUS);
						State = 60; multdivmod(0);
						}
						break;
					case 2:
						{
						_localctx = new MinusContext(new ExprContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_expr);
						State = 61;
						if (!(Precpred(Context, 2))) throw new FailedPredicateException(this, "Precpred(Context, 2)");
						State = 62; Match(MINUS);
						State = 63; multdivmod(0);
						}
						break;
					}
					} 
				}
				State = 68;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class MultdivmodContext : ParserRuleContext {
		public MultdivmodContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_multdivmod; } }
	 
		public MultdivmodContext() { }
		public virtual void CopyFrom(MultdivmodContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class DivContext : MultdivmodContext {
		public MultdivmodContext multdivmod() {
			return GetRuleContext<MultdivmodContext>(0);
		}
		public ITerminalNode DIV() { return GetToken(TableurParser.DIV, 0); }
		public UnaryContext unary() {
			return GetRuleContext<UnaryContext>(0);
		}
		public DivContext(MultdivmodContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterDiv(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitDiv(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDiv(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ToUnaryContext : MultdivmodContext {
		public UnaryContext unary() {
			return GetRuleContext<UnaryContext>(0);
		}
		public ToUnaryContext(MultdivmodContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterToUnary(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitToUnary(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitToUnary(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ModContext : MultdivmodContext {
		public MultdivmodContext multdivmod() {
			return GetRuleContext<MultdivmodContext>(0);
		}
		public ITerminalNode MOD() { return GetToken(TableurParser.MOD, 0); }
		public UnaryContext unary() {
			return GetRuleContext<UnaryContext>(0);
		}
		public ModContext(MultdivmodContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterMod(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitMod(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMod(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultContext : MultdivmodContext {
		public MultdivmodContext multdivmod() {
			return GetRuleContext<MultdivmodContext>(0);
		}
		public ITerminalNode MULT() { return GetToken(TableurParser.MULT, 0); }
		public UnaryContext unary() {
			return GetRuleContext<UnaryContext>(0);
		}
		public MultContext(MultdivmodContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.EnterMult(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ITableurListener typedListener = listener as ITableurListener;
			if (typedListener != null) typedListener.ExitMult(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITableurVisitor<TResult> typedVisitor = visitor as ITableurVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMult(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MultdivmodContext multdivmod() {
		return multdivmod(0);
	}

	private MultdivmodContext multdivmod(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		MultdivmodContext _localctx = new MultdivmodContext(Context, _parentState);
		MultdivmodContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_multdivmod, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new ToUnaryContext(_localctx);
			Context = _localctx;
			_prevctx = _localctx;
